<resources>

    <string name="app_name">演示版本</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">演示版本</string>
    <!-- 进行测试的相应的内容命名 -->
    <string name="test_name">天外飞仙</string>
    <string name="test_exitlogin">退出登录</string>
    <string name="test_closemenu">关闭</string>
    <string name="test_ok">确认</string>
    <string name="test_no">取消</string>
    <string name="test_gone">已经退出</string>
    <string name="test_app_title">智慧加气站管理系统</string>
    <string name="test_login">登录</string>
    <string name="test_message">消息</string>
    <string name="test_add">+</string>
    <string name="test_runmanage">运营管理</string>
    <string name="test_devicemanage">设备管理</string>
    <string name="test_customermanage">客户管理</string>
    <string name="test_transmanage">传输管理</string>
    <string name="test_month">按月分析</string>
    <string name="test_Quarterly">季度分析</string>
    <string name="test_year">按年分析</string>

</resources>