<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <include
        android:id="@+id/laytitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/act_top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/laytitle"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/laytop"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:dividerHeight="1dip"
            android:divider="#CFCFCF"
            android:cacheColorHint="#00000000"
            android:layout_weight="1" >
        </ListView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#CFCFCF" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/lay1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/test_month"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="#CFCFCF" />

            <RelativeLayout
                android:id="@+id/lay2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/test_Quarterly"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="#CFCFCF" />

            <RelativeLayout
                android:id="@+id/lay3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/test_year"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:id="@+id/v3"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#CFCFCF" />

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:scrollbars="none" >

           <RelativeLayout
               android:id="@+id/linear"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               tools:ignore="ScrollViewSize" >

            </RelativeLayout>
        </HorizontalScrollView>
    </LinearLayout>

</RelativeLayout>