<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D4D4D4" >

    <include
        android:id="@+id/laytitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/act_top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/laytitle"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/laytop"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:dividerHeight="0dip"
            android:divider="#ffffff"
            android:cacheColorHint="#00000000"
            android:layout_weight="1" >
        </ListView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#CFCFCF" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/lay1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" >

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/test_month"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="#CFCFCF" />

            <RelativeLayout
                android:id="@+id/lay2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/test_Quarterly"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="#CFCFCF" />

            <RelativeLayout
                android:id="@+id/lay3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/test_year"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#CFCFCF" />
		<LinearLayout
		    android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#708090"
            android:orientation="vertical"
		    >    

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:scrollbars="none"
            tools:ignore="NestedWeights" >

            <RelativeLayout
                android:id="@+id/pillars"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:ignore="ScrollViewSize" >
            </RelativeLayout>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/topicbottom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            />
		</LinearLayout>
    </LinearLayout>
</RelativeLayout>